Changed the resolution in the activity_xmixdirx + added 'play again' button

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 30 15:50:14 IST 2022
-sdk.dir=C\:\\Users\\rashe_000\\AppData\\Local\\Android\\Sdk
+#Tue Dec 06 09:37:18 IST 2022
+sdk.dir=C\:\\Users\\DAkulich\\AppData\\Local\\Android\\Sdk
